# myDFHackPlugin

./: .gitignore  CMakeLists.txt  Events.hpp  main.cpp  parseOldLog.py  test.cpp  test.hpp
DataLogging/: CMakeLists.txt  CallbackLoggers.hpp  DFDataLogger.cpp  DFDataLogger.hpp  DateAndTime.cpp  DateAndTime.hpp  Helper.hpp  QueryFunctions.hpp  RepeatedLoggers.cpp  RepeatedLoggers.hpp  import_json_log_to_sqlite.py
DataLogging/models/: Announcements.hpp  Deaths.cpp  Deaths.hpp  Events.hpp  Items.hpp  Jobs.hpp  Petitions.hpp  Primitives.hpp  Sieges.hpp  Units.hpp
DataLogging/test/: DateTimeTest.cpp
sqliteWrapper/: CMakeLists.txt  Logger.hpp  SQLITEWrapper.hpp  main.cpp
